:wrench: Valve Pipe is now made by placing a lever on the brass pipe

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -125,7 +125,7 @@ research.CreativeTank.name=sekrit page
 research.CreativeTank.0=u find sekrit
 research.Pipe.name=Pipes
 research.Pipe.0=Steam is useless without a way to move it about but I've struggled to find a way to move it effectively.\nBrass pipes are able to resist corrosion and thus make the perfect conduit for steam.
-research.Pipe.1=Combining a lever with a pipe allows me to toggle the flow of steam. Right clicking on this valve pipe will open or close the valve.
+research.Pipe.1=Placing a lever on a pipe allows me to toggle the flow of steam. Right clicking on this valve pipe will open or close the valve.
 research.RuptureDisc.name=Rupture Disc
 research.RuptureDisc.0=One too many times I've lost a valuable boiler or machine because its pressure was too high. This is where the rupture disc comes in.\nTo use the rupture disc, I simply place one on a machine or pipe that I fear may explode.
 research.RuptureDisc.1=It will pop before a critical pressure is reached, letting steam out. Of course, it will keep letting steam out until repaired by crafting with a zinc plate or right clicking with a zinc plate.
