:gem: :art: Gold and Brass tools are now made by casting New brass tool textures thanks to Lance :heart: Gold normal recipes can be re-enabled in the config

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -525,6 +525,11 @@ item.esteemedinnovation:mold_item.ingot.name=Ingot Mold
 item.esteemedinnovation:mold_item.nugget.name=Nugget Mold
 item.esteemedinnovation:mold_item.plate.name=Plate Mold
 item.esteemedinnovation:mold_item.pipe.name=Pipe Mold
+item.esteemedinnovation:mold_item.axe.name=Axe Mold
+item.esteemedinnovation:mold_item.hoe.name=Hoe Mold
+item.esteemedinnovation:mold_item.pickaxe.name=Pickaxe Mold
+item.esteemedinnovation:mold_item.shovel.name=Shovel Mold
+item.esteemedinnovation:mold_item.sword.name=Sword Mold
 item.esteemedinnovation:blank_mold.name=Blank Mold
 
 item.esteemedinnovation:gilded_iron_helmet.name=Gilded Iron Helmet
