:gem: New Gilded Iron drill head material

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -586,6 +586,7 @@ drill.iron=Iron
 drill.brass=Brass
 drill.diamond=Diamond
 drill.emerald=Emerald
+drill.gilded_iron=Gilded Iron
 
 item.esteemedinnovation:steamcell_empty.name=Empty Steam Cell
 item.esteemedinnovation:steamcell_full.name=Full Steam Cell
