:shirt: Clean up GuiJournal class Split up the drawScreen method into a lot of smaller more readable and understandable private methods. Use proper string formatting for esteemedinnovation.book.by.

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -1,6 +1,6 @@
 esteemedinnovation.book.index=Index
 esteemedinnovation.book.info=A brief guide to steam power.
-esteemedinnovation.book.by=by
+esteemedinnovation.book.by=by %s
 esteemedinnovation.book.shapeless=Shapeless
 esteemedinnovation.book.clickme=Click to go to crafting
 esteemedinnovation.book.shiftright=Control click to go to information
