:wrench: Change the way hints are displayed in the book. They are now "ideas" that the player has. They are listed in an Idea list, which is a "fake section" at the end of the book. When the player learns from the hint, it is striked out.

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -808,3 +808,5 @@ item.esteemedinnovation:leather_exosuit_legs.name=Leather Exosuit Legpiece
 item.esteemedinnovation:leather_exosuit_feet.name=Leather Exosuit Footpiece
 
 entity.Villager.steam_engineer=Steam Engineer
+
+section.Ideas.name=Ideas
