:package: Rename Plate Mold to Thin Plate Mold

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -609,7 +609,7 @@ item.esteemedinnovation:uber_reinforced_tank.name=Heavily Reinforced Exosuit Tan
 
 item.esteemedinnovation:mold_item.ingot.name=Ingot Mold
 item.esteemedinnovation:mold_item.nugget.name=Nugget Mold
-item.esteemedinnovation:mold_item.plate.name=Plate Mold
+item.esteemedinnovation:mold_item.thin_plate.name=Thin Plate Mold
 item.esteemedinnovation:mold_item.pipe.name=Pipe Mold
 item.esteemedinnovation:mold_item.axe.name=Axe Mold
 item.esteemedinnovation:mold_item.hoe.name=Hoe Mold
